added work page

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,6 +2,7 @@
   <h1>{{title}}</h1>
   <p>
     <a href="/">Home</a> |
-    <a href="/about">About</a>
+    <a href="/about">About</a> |
+    <a href="/work">Work</a>
   </p>
 </header>
